--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,16 @@ dist.jar=${dist.dir}/Restaurant.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.google-cloud-storage-1.0.0.jar=libraries/google-cloud-storage-1.0.0.jar
+file.reference.httpclient-0.3-3.jar=libraries/httpclient-0.3-3.jar
+file.reference.json-simple-1.1.1.jar=libraries/json-simple-1.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.google-cloud-storage-1.0.0.jar}:\
+    ${file.reference.httpclient-0.3-3.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
