Added Dashboard items

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,14 +31,22 @@ endorsed.classpath=
 excludes=
 file.reference.google-cloud-storage-1.0.0.jar=libraries/google-cloud-storage-1.0.0.jar
 file.reference.httpclient-0.3-3.jar=libraries/httpclient-0.3-3.jar
+file.reference.itextpdf-5.4.1.jar=libraries/itextpdf-5.4.1.jar
+file.reference.jcalendar-1.4.jar=libraries/jcalendar-1.4.jar
 file.reference.json-simple-1.1.1.jar=libraries/json-simple-1.1.1.jar
+file.reference.mysql-connector-java-5.1.37-bin.jar=libraries/mysql-connector-java-5.1.37-bin.jar
+file.reference.swingx-all-1.6.4.jar=libraries/swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.google-cloud-storage-1.0.0.jar}:\
     ${file.reference.httpclient-0.3-3.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.itextpdf-5.4.1.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.37-bin.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
