--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /dist/
+!/libraries/httpclient-0.3-3.jar
+!/libraries/jcalendar-1.4.jar
+!/libraries/swingx-all-1.6.4.jar
+!/libraries/google-cloud-storage-1.0.0.jar
+!/libraries/mysql-connector-java-5.1.37-bin.jar
+!/libraries/json-simple-1.1.1.jar
+!/libraries/itextpdf-5.4.1.jar
